--- a/index.html
+++ b/index.html
@@ -10,7 +10,21 @@
     <!-- Hmm, what is the impact of web fonts on speed? Measure it...
     <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">  -->
 
+    <style type="text/css">
+        @font-face{font-family:'Open Sans';font-style:normal;font-weight:400;
+        src:url(http://fonts.googleapis.com/css?family=Open+Sans:400) format('woff2'),
+        url(http://fonts.googleapis.com/css?family=Open+Sans:400) format('woff'),
+        url(http://fonts.googleapis.com/css?family=Open+Sans:400) format('ttf'),
+        url(http://fonts.googleapis.com/css?family=Open+Sans:400) format('eot');unicode-range:U+000-5FF}
+        @font-face{font-family:'Open Sans';font-style:normal;font-weight:700;
+        src:url(http://fonts.googleapis.com/css?family=Open+Sans:700) format('woff2'),
+        url(http://fonts.googleapis.com/css?family=Open+Sans:700) format('woff'),
+        url(http://fonts.googleapis.com/css?family=Open+Sans:700) format('ttf'),
+        url(http://fonts.googleapis.com/css?family=Open+Sans:700) format('eot');unicode-range:U+000-5FF}
+    </style>
+
     <link href="css/style.css" rel="stylesheet">
+
     <link href="css/print.css" rel="stylesheet" media="print">
 
  <!--   <script>
