--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         url(http://fonts.googleapis.com/css?family=Open+Sans:700) format('eot');unicode-range:U+000-5FF}
     </style>
 
-    <link href="css/style.css" rel="stylesheet">
+    <link async href="css/style.css" rel="stylesheet">
 
     <link href="css/print.css" rel="stylesheet" media="print">
 
